--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Intro Section -->
     <section id="home" class="min-h-screen flex items-center pt-20 hero-gradient">
         <div class="max-w-7xl mx-auto px-6 py-20 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-12 md:mb-0">
