--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-white">Analytics Dashboard</h3>
                             <div class="flex space-x-2">
-                                <a href="#" class="text-white/50 hover:text-blue-400 transition-colors">
+                                <a href="Qr.html" class="text-white/50 hover:text-blue-400 transition-colors">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                                 <a href="#" class="text-white/50 hover:text-blue-400 transition-colors">
